# govuk-ai-graph-tools

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  govuk_ai_graph_tools_app.py  graph-viewmodel.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
src/: generate_graph.py  visualiser_graph_generator.py  visualiser_graph_loader.py
src/content_extractor/: base.py  highlighter.py  opensearch.py  s3_sequential.py
src/models/: graph_models.py
src/url/: generator.py
src/utils/: __init__.py  job_tracker.py
static/css/: graph.css
templates/: graph.html  visualisations.html
tests/: test_graph_validation.py  test_routes.py
