[project]
name = "extractor-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.88",
    "fsspec>=2026.3.0",
    "pydantic>=2.13.0",
    "pydantic-ai-slim[bedrock]>=1.80.0",
    "python-dotenv>=1.2.2",
    "s3fs>=0.4.2",
    "opensearch-py>=2.8.0",
    "requests-aws4auth>=1.3.1",
    "flask[async]==3.1.2",
    "waitress>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
