[project]
name = "extractor-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.88",
    "fsspec>=2026.3.0",
    "pydantic>=2.13.0",
    "pydantic-ai-slim[bedrock]>=1.80.0",
    "python-dotenv>=1.2.2",
    "s3fs>=0.4.2",
    "opensearch-py>=2.8.0",
    "requests-aws4auth>=1.3.1",
    "flask[async]==3.1.2",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = false
check_untyped_defs = true
no_implicit_reexport = true
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
